clients changed and body horizontal overflow fixed

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body{
     background: var(--body-bg-color);
     margin: 2rem 0 0 0;
     transition: .5s ease;
+    overflow-x: hidden;
 }
 .header{
     z-index: 99999;
